overflow & back button fixed 🛠️

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -104,9 +104,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.2);
     transition: transform 0.5s;
+    overflow: hidden;
 }
 .global {
     background: rgb(116,88,251);
@@ -120,7 +121,7 @@
     transform: scale(1.05);
 }
 .global>span:nth-child(2), .periodo>span:nth-child(2){
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 main {
